# ptcg_agents

./: .gitignore  README.md  app.py  pyproject.toml
agents/: random_agent.py
api/: .gitignore  nest-cli.json  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
api/src/: app.module.ts  main.ts
api/src/common/: api-response.ts  (+2 more)
auto-card-IR-gen/auto_card_ir_gen/: __init__.py  clients.py  exceptions.py  pipeline.py  storage.py  templates.py
core/: __init__.py  random_control.py
doc/: acceptanceCriteria  par_rulebook_en.pdfZone.Identifier  requirement.md  task.md
env/: battle_env.py  simple_env.py  types.py
ptcg-data-update-tool/: .env  README.md  backup.js  dbImporter.js  main.js  package-lock.json  package.json  ptcgCardStore.js  retry.json  setdata.json
rule/: .coveragerc  Makefile  app.py  pyproject.toml  pytest.ini
rule/core/: __init__.py  cards.py  errors.py  logging_config.py  pokemon_tcg_sync.py  state_machine.py
rule/dacite/: __init__.py
rule/env/: __init__.py  battle_env.py  simple_env.py
rule/rules/: engine.py  errors.py  loader.py
rule/scripts/: card_ir_demo.py  example_run.py  sync_pokemon_tcg.py
rule/tests/: conftest.py  test_action_mask.py  test_auto_ir_pipeline.py  test_clients.py  test_dacite.py  test_env.py  test_pokemon_tcg_sync.py  test_state_hash.py  test_state_machine.py
rules/: __init__.py  effects.py  schema.py
tests/: conftest.py  test_action_mask.py  test_cards.py  test_logging.py  test_random_control.py  test_rewards.py  test_rule_repository.py  test_rules_engine.py  test_rules_schema.py
(+22 files in other folders)
